Further tuning of articles page. Sidebar vs article positioning refactored. Scrolling of the article is detached from body -- overlapping scrollbars fixed.

--- a/src/app/components/Main.scss
+++ b/src/app/components/Main.scss
@@ -29,6 +29,14 @@ nav ul a, nav .brand-logo {
     }
 }
 
+body {
+  overflow: hidden;
+  .article-wrapper {
+    max-height: 100vh;
+    overflow-y: scroll;
+  }
+}
+
 .article {
     h1 {
         font-size: 1.64rem;
