--- a/src/app/containers/Sidebar.scss
+++ b/src/app/containers/Sidebar.scss
@@ -1,11 +1,7 @@
-.sidebar {
+.sidebar-wrapper {
   background-color: #fff;
   overflow: scroll;
-  max-width: inherit;
-  max-height: 100%;
-  top: 64px;
-  position: fixed;
-  right: 0;
+  max-height: 99vh;
   padding: 10px;
 }
 
