--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -1,1 +1,5 @@
-@import './components/_cards'
+@import './components/_cards';
+
+p {
+  margin: 0 15px 0 0;
+}
