--- a/src/assets/sass/_vendor_overrides.scss
+++ b/src/assets/sass/_vendor_overrides.scss
@@ -1,5 +1,3 @@
-textarea.materialize-textarea {
-  padding: .2em .4em;
-  height: 1.4em;
-  min-height: 1.4em;
+.articles .collection-item {
+  padding: 1em;
 }
